--- a/lib-zxing/build.gradle
+++ b/lib-zxing/build.gradle
@@ -2,14 +2,14 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    buildToolsVersion '28.0.2'
 
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
-
+        publishNonDefault true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
@@ -19,22 +19,33 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    repositories {
+        flatDir {
+            dirs 'libs'
+        }
+    }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    api fileTree(include: ['*.jar'], dir: 'libs')
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.1.1'
-    compile 'com.android.support:support-v4:25.1.1'
-    testCompile 'junit:junit:4.12'
+    api 'com.android.support:appcompat-v7:25.1.1'
+    api 'com.android.support:support-v4:25.1.1'
+    testImplementation 'junit:junit:4.12'
 }
 
-ext {
-    PUBLISH_GROUP_ID = 'cn.yipianfengye.android'
-    PUBLISH_ARTIFACT_ID = 'zxing-library'
-    PUBLISH_VERSION = '2.2'
+//ext {
+//    PUBLISH_GROUP_ID = 'cn.yipianfengye.android'
+//    PUBLISH_ARTIFACT_ID = 'zxing-library'
+//    PUBLISH_VERSION = '2.2'
+//}
+task releaseJar(type: Copy) {
+    from('build/intermediates/ipackaged-classes/debug')
+    into('build/outputs/')
+    include('classes.jar')
+    rename('classes.jar','zxing.jar')
 }
-
-apply from: 'https://raw.githubusercontent.com/blundell/release-android-library/master/android-release-aar.gradle'
+//releaseJar.dependsOn(build)
+//apply from: 'https://raw.githubusercontent.com/blundell/release-android-library/master/android-release-aar.gradle'
